// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Docker isolation parity for runs without services > keeps every claude-code argument list unchanged 1`] = `
{
  "deadlineMs": 900000,
  "keeperCreateArgs": [
    "container",
    "create",
    "--name",
    "wardby-keeper-fd814509cf440d421389",
    "--pull",
    "never",
    "--user",
    "10001:10001",
    "--network",
    "none",
    "--read-only",
    "--cap-drop",
    "ALL",
    "--security-opt",
    "no-new-privileges=true",
    "--security-opt",
    "seccomp=builtin",
    "--cgroupns",
    "private",
    "--ipc",
    "none",
    "--cpus",
    "0.25",
    "--memory",
    "640m",
    "--memory-swap",
    "640m",
    "--memory-swappiness",
    "0",
    "--pids-limit",
    "32",
    "--restart",
    "no",
    "--log-driver",
    "local",
    "--log-opt",
    "max-size=1m",
    "--log-opt",
    "max-file=2",
    "--mount",
    "type=volume,src=wardby-storage-fd814509cf440d421389,dst=/run/wardby/storage,volume-nocopy",
    "--label",
    "io.wardby.managed=true",
    "--label",
    "io.wardby.component=coding-worker",
    "--label",
    "io.wardby.run-sha256=fd814509cf440d4213891eeeb1992c2b0c2e26f15d47eab264ac2801561d2ab1",
    "--entrypoint",
    "node",
    "registry.example/wardby-worker@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "/opt/wardby/coding-worker/keeper.js",
  ],
  "networkCreateArgs": [
    "network",
    "create",
    "--driver",
    "bridge",
    "--internal",
    "--ipv6=false",
    "--opt",
    "com.docker.network.bridge.gateway_mode_ipv4=isolated",
    "--opt",
    "com.docker.network.bridge.gateway_mode_ipv6=isolated",
    "--label",
    "io.wardby.managed=true",
    "--label",
    "io.wardby.component=coding-worker",
    "--label",
    "io.wardby.run-sha256=fd814509cf440d4213891eeeb1992c2b0c2e26f15d47eab264ac2801561d2ab1",
    "wardby-net-fd814509cf440d421389",
  ],
  "proxyNetworkConnectArgs": [
    "network",
    "connect",
    "--alias",
    "wardby-proxy",
    "wardby-net-fd814509cf440d421389",
    "trusted-proxy",
  ],
  "stopGraceSeconds": 10,
  "storageVolumeCreateArgs": [
    "volume",
    "create",
    "--driver",
    "local",
    "--opt",
    "type=tmpfs",
    "--opt",
    "device=tmpfs",
    "--opt",
    "o=size=512m,nr_inodes=131072,uid=10001,gid=10001,mode=0700,nosuid,nodev",
    "--label",
    "io.wardby.managed=true",
    "--label",
    "io.wardby.component=coding-worker",
    "--label",
    "io.wardby.run-sha256=fd814509cf440d4213891eeeb1992c2b0c2e26f15d47eab264ac2801561d2ab1",
    "wardby-storage-fd814509cf440d421389",
  ],
  "toolCreateArgs": [
    "container",
    "create",
    "--name",
    "wardby-tools-fd814509cf440d421389",
    "--pull",
    "never",
    "--user",
    "10001:10001",
    "--network",
    "wardby-net-fd814509cf440d421389",
    "--read-only",
    "--cap-drop",
    "ALL",
    "--security-opt",
    "no-new-privileges=true",
    "--security-opt",
    "seccomp=builtin",
    "--init",
    "--cgroupns",
    "private",
    "--ipc",
    "none",
    "--cpus",
    "0.25",
    "--memory",
    "341m",
    "--memory-swap",
    "341m",
    "--memory-swappiness",
    "0",
    "--pids-limit",
    "64",
    "--shm-size",
    "16m",
    "--tmpfs",
    "/tmp:rw,noexec,nosuid,nodev,size=42m,mode=1777",
    "--tmpfs",
    "/home/wardby:rw,noexec,nosuid,nodev,size=42m,uid=10001,gid=10001,mode=0700",
    "--mount",
    "type=volume,src=wardby-storage-fd814509cf440d421389,dst=/workspace,volume-subpath=workspace,volume-nocopy",
    "--mount",
    "type=volume,src=wardby-storage-fd814509cf440d421389,dst=/run/wardby/tool,volume-subpath=tool,volume-nocopy",
    "--env",
    "WARDBY_TOOL_SETUP",
    "--restart",
    "no",
    "--stop-signal",
    "SIGTERM",
    "--stop-timeout",
    "10",
    "--log-driver",
    "local",
    "--log-opt",
    "max-size=1m",
    "--log-opt",
    "max-file=2",
    "--label",
    "io.wardby.managed=true",
    "--label",
    "io.wardby.component=coding-worker",
    "--label",
    "io.wardby.run-sha256=fd814509cf440d4213891eeeb1992c2b0c2e26f15d47eab264ac2801561d2ab1",
    "registry.example/wardby-tools@sha256:bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb",
  ],
  "workerCreateArgs": [
    "container",
    "create",
    "--name",
    "wardby-worker-fd814509cf440d421389",
    "--pull",
    "never",
    "--user",
    "10001:10001",
    "--network",
    "wardby-net-fd814509cf440d421389",
    "--read-only",
    "--cap-drop",
    "ALL",
    "--security-opt",
    "no-new-privileges=true",
    "--security-opt",
    "seccomp=builtin",
    "--init",
    "--cgroupns",
    "private",
    "--ipc",
    "none",
    "--cpus",
    "1.25",
    "--memory",
    "683m",
    "--memory-swap",
    "683m",
    "--memory-swappiness",
    "0",
    "--pids-limit",
    "64",
    "--shm-size",
    "16m",
    "--tmpfs",
    "/tmp:rw,noexec,nosuid,nodev,size=64m,mode=1777",
    "--tmpfs",
    "/home/wardby:rw,noexec,nosuid,nodev,size=64m,uid=10001,gid=10001,mode=0700",
    "--mount",
    "type=volume,src=wardby-storage-fd814509cf440d421389,dst=/run/wardby/input,volume-subpath=input,volume-nocopy,readonly",
    "--mount",
    "type=volume,src=wardby-storage-fd814509cf440d421389,dst=/run/wardby/output,volume-subpath=output,volume-nocopy",
    "--mount",
    "type=volume,src=wardby-storage-fd814509cf440d421389,dst=/run/wardby/tool,volume-subpath=tool,volume-nocopy",
    "--env",
    "WARDBY_PROXY_URL=http://wardby-proxy:8787",
    "--env",
    "WARDBY_RUN_CAPABILITY",
    "--restart",
    "no",
    "--stop-signal",
    "SIGTERM",
    "--stop-timeout",
    "10",
    "--log-driver",
    "local",
    "--log-opt",
    "max-size=1m",
    "--log-opt",
    "max-file=2",
    "--label",
    "io.wardby.managed=true",
    "--label",
    "io.wardby.component=coding-worker",
    "--label",
    "io.wardby.run-sha256=fd814509cf440d4213891eeeb1992c2b0c2e26f15d47eab264ac2801561d2ab1",
    "registry.example/wardby-worker@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  ],
}
`;

exports[`Docker isolation parity for runs without services > keeps every codex argument list unchanged 1`] = `
{
  "deadlineMs": 900000,
  "keeperCreateArgs": [
    "container",
    "create",
    "--name",
    "wardby-keeper-fd814509cf440d421389",
    "--pull",
    "never",
    "--user",
    "10001:10001",
    "--network",
    "none",
    "--read-only",
    "--cap-drop",
    "ALL",
    "--security-opt",
    "no-new-privileges=true",
    "--security-opt",
    "seccomp=builtin",
    "--cgroupns",
    "private",
    "--ipc",
    "none",
    "--cpus",
    "0.25",
    "--memory",
    "640m",
    "--memory-swap",
    "640m",
    "--memory-swappiness",
    "0",
    "--pids-limit",
    "32",
    "--restart",
    "no",
    "--log-driver",
    "local",
    "--log-opt",
    "max-size=1m",
    "--log-opt",
    "max-file=2",
    "--mount",
    "type=volume,src=wardby-storage-fd814509cf440d421389,dst=/run/wardby/storage,volume-nocopy",
    "--label",
    "io.wardby.managed=true",
    "--label",
    "io.wardby.component=coding-worker",
    "--label",
    "io.wardby.run-sha256=fd814509cf440d4213891eeeb1992c2b0c2e26f15d47eab264ac2801561d2ab1",
    "--entrypoint",
    "node",
    "registry.example/wardby-worker@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
    "/opt/wardby/coding-worker/keeper.js",
  ],
  "networkCreateArgs": [
    "network",
    "create",
    "--driver",
    "bridge",
    "--internal",
    "--ipv6=false",
    "--opt",
    "com.docker.network.bridge.gateway_mode_ipv4=isolated",
    "--opt",
    "com.docker.network.bridge.gateway_mode_ipv6=isolated",
    "--label",
    "io.wardby.managed=true",
    "--label",
    "io.wardby.component=coding-worker",
    "--label",
    "io.wardby.run-sha256=fd814509cf440d4213891eeeb1992c2b0c2e26f15d47eab264ac2801561d2ab1",
    "wardby-net-fd814509cf440d421389",
  ],
  "proxyNetworkConnectArgs": [
    "network",
    "connect",
    "--alias",
    "wardby-proxy",
    "wardby-net-fd814509cf440d421389",
    "trusted-proxy",
  ],
  "stopGraceSeconds": 10,
  "storageVolumeCreateArgs": [
    "volume",
    "create",
    "--driver",
    "local",
    "--opt",
    "type=tmpfs",
    "--opt",
    "device=tmpfs",
    "--opt",
    "o=size=512m,nr_inodes=131072,uid=10001,gid=10001,mode=0700,nosuid,nodev",
    "--label",
    "io.wardby.managed=true",
    "--label",
    "io.wardby.component=coding-worker",
    "--label",
    "io.wardby.run-sha256=fd814509cf440d4213891eeeb1992c2b0c2e26f15d47eab264ac2801561d2ab1",
    "wardby-storage-fd814509cf440d421389",
  ],
  "workerCreateArgs": [
    "container",
    "create",
    "--name",
    "wardby-worker-fd814509cf440d421389",
    "--pull",
    "never",
    "--user",
    "10001:10001",
    "--network",
    "wardby-net-fd814509cf440d421389",
    "--read-only",
    "--cap-drop",
    "ALL",
    "--security-opt",
    "no-new-privileges=true",
    "--security-opt",
    "seccomp=builtin",
    "--init",
    "--cgroupns",
    "private",
    "--ipc",
    "none",
    "--cpus",
    "1.5",
    "--memory",
    "1024m",
    "--memory-swap",
    "1024m",
    "--memory-swappiness",
    "0",
    "--pids-limit",
    "64",
    "--shm-size",
    "16m",
    "--tmpfs",
    "/tmp:rw,noexec,nosuid,nodev,size=64m,mode=1777",
    "--tmpfs",
    "/home/wardby:rw,noexec,nosuid,nodev,size=64m,uid=10001,gid=10001,mode=0700",
    "--mount",
    "type=volume,src=wardby-storage-fd814509cf440d421389,dst=/workspace,volume-subpath=workspace,volume-nocopy",
    "--mount",
    "type=volume,src=wardby-storage-fd814509cf440d421389,dst=/run/wardby/input,volume-subpath=input,volume-nocopy,readonly",
    "--mount",
    "type=volume,src=wardby-storage-fd814509cf440d421389,dst=/run/wardby/output,volume-subpath=output,volume-nocopy",
    "--env",
    "WARDBY_PROXY_URL=http://wardby-proxy:8787",
    "--env",
    "WARDBY_RUN_CAPABILITY",
    "--restart",
    "no",
    "--stop-signal",
    "SIGTERM",
    "--stop-timeout",
    "10",
    "--log-driver",
    "local",
    "--log-opt",
    "max-size=1m",
    "--log-opt",
    "max-file=2",
    "--label",
    "io.wardby.managed=true",
    "--label",
    "io.wardby.component=coding-worker",
    "--label",
    "io.wardby.run-sha256=fd814509cf440d4213891eeeb1992c2b0c2e26f15d47eab264ac2801561d2ab1",
    "registry.example/wardby-worker@sha256:aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa",
  ],
}
`;
